Fix handling of sparse files.

Don't fake the reading of blocks used for a file.

BUG: 135611


svn path=/trunk/playground/utils/filelight/; revision=1134661